--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<main>
 			<div class="block">
 			<h1>NekoCL</h1>
-			<p>This is my website and I'm gonna put more stuff here eventually I think but right now just make do with this shitty landing page while I work one the rest of it</p>
+			<p>Hello! I'm NekoCL, I make music and sometimes other stuff every now and then. I don't know why or how you ended up here but since you are, please check out my links below, I promise you won't regret it that much :^)</p>
+			<p>I'm probably gonna keep working on this in future if I'm not lazy</p>
 			</div>
 			<div class="block">
 			<h2>Links</h2>
@@ -29,7 +30,7 @@
 			<div class="block">
 			<h2>Tanya!~</h2>
 			<img src="tanya.png" width="300">
-			<p>This is Tanya, please be nice to her</p>
+			<p>This is Tanya, she's a nice girl, please be nice to her and no bullying please.</p>
 			</div>
 		</main>
 	</body>
