--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 			<img src="tanya.png" width="300">
 			<p>This is Tanya, she's a nice girl, please be nice to her and no bullying please.</p>
 			</div>
+			<div class="block">
+			<p><div align='center'><a href='https://www.websitecounterfree.com'><img src='https://www.websitecounterfree.com/c.php?d=6&id=27438&s=1' border='0' alt='Free Website Counter'></a><br / ><small><a href='https://www.websitecounterfree.com' title="Free Website Counter">Free Website Counter</a></small></div></p>
+			</div>
 		</main>
 	</body>
 </html>
