--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
 	</head>
 	<body>	
 		<div class="sidebar">
-			<img src="debian.gif">
-			<img src="debian-powered.gif">
-			<img src="hdfy.gif">
-			<img src="Arch.gif">
-			<img src="qutebrowser.gif">
-		</div>
+			<img src="hdfy.gif"> <img src="Arch.gif"><br>
+			<a href="https://soundcloud.com/nekocl"><img src="soundcloud.png" width=90px></a> <a href="https://soundcloud.com/nekocl"><img src="youtube.png" width=90px></a>
+		</div></div>
 		<main>
 			<div class="block">
 			<h1>NekoCL</h1>
-			<p>Big things to come</p>
+			<p>I'm NekoCL. I make music and stuff. I'll probably update this more in the future and lay things out a little bit better, but as for now it'll probably where I just put my music and anything else I decide to work on.</p>
 			</div>
 			<div class="block">
-			<h2>Links</h2>
-			<a href="https://www.youtube.com/channel/UCw7DloDvtH5LXdqRv0-PZfA">Youtube</a>
-			<a href="https://soundcloud.com/nekocl">Soundcloud</a>
-			<p></p>
+			<h1>Links</h1>
+			<p><a href="https://www.youtube.com/channel/UCw7DloDvtH5LXdqRv0-PZfA">Youtube</a>
+			<a href="https://soundcloud.com/nekocl">Soundcloud</a></p>
+			</div>
+			<div class="block">
+			<h1>Music</h1>
+			<p>
+			Here's some of the songs I've made this past year. I'll organise stuff better eventually.
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1693717515&color=%238c949c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/nekocl" title="NekoCL" target="_blank" style="color: #cccccc; text-decoration: none;">NekoCL</a> · <a href="https://soundcloud.com/nekocl/neuronic-nectar" title="Neuronic Nectar" target="_blank" style="color: #cccccc; text-decoration: none;">Neuronic Nectar</a></div>
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1614797382&color=%239c989c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/nekocl" title="NekoCL" target="_blank" style="color: #cccccc; text-decoration: none;">NekoCL</a> · <a href="https://soundcloud.com/nekocl/neon-dreams-in-the-digital-rain" title="Neon Dreams in the Digital Rain" target="_blank" style="color: #cccccc; text-decoration: none;">Neon Dreams in the Digital Rain</a></div>
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1593093126&color=%23564136&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/nekocl" title="NekoCL" target="_blank" style="color: #cccccc; text-decoration: none;">NekoCL</a> · <a href="https://soundcloud.com/nekocl/afternoon-slack" title="Afternoon Slack" target="_blank" style="color: #cccccc; text-decoration: none;">Afternoon Slack</a></div>
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1447801141&color=%236c6474&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/nekocl" title="NekoCL" target="_blank" style="color: #cccccc; text-decoration: none;">NekoCL</a> · <a href="https://soundcloud.com/nekocl/subnet-silhouette" title="Subnet Silhouette" target="_blank" style="color: #cccccc; text-decoration: none;">Subnet Silhouette</a></div>
+			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1430139532&color=%23947878&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/nekocl" title="NekoCL" target="_blank" style="color: #cccccc; text-decoration: none;">NekoCL</a> · <a href="https://soundcloud.com/nekocl/npssn" title="170-NP-SSN" target="_blank" style="color: #cccccc; text-decoration: none;">170-NP-SSN</a></div> 
+			
 			</div>
 		</main>
 	</body>
